Some more learning. Khud diff kar liyo xD

--- a/Decorators.ipynb
+++ b/Decorators.ipynb
@@ -181,40 +181,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9cc8b12d-efb6-418b-8530-53f1f7eda050",
+   "execution_count": 1,
+   "id": "dcef7025-23f3-4109-bc9e-8768f1d3194d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def extra_func(original_func):\n",
+    "    def wrap_func():\n",
+    "        print(\"This is extra code before the main code\")\n",
+    "        original_func()\n",
+    "        print(\"This is extra code after the main code\")\n",
+    "    return wrap_func()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c91d1946-f5ca-4ccb-848b-7ae24b5608f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @extra_func\n",
+    "def simple_func():\n",
+    "    print(\"I want to be decorated!!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "52e28830-6be4-4d9f-8dc3-e2d5add0e63b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is extra code before the main code\n",
+      "I want to be decorated!!!\n",
+      "This is extra code after the main code\n"
+     ]
+    }
+   ],
+   "source": [
+    "extra_func(simple_func)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eb42be8-3856-49fb-8706-6ec8091587b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7353f1a4-5789-426a-96b9-8de0ae4363ea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8903494-64e5-4a1c-bf72-a85882f3aeaf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7a56688-c8bb-4c82-91b5-33c323f78a85",
+   "id": "d57e2aee-b1a8-4326-a406-d46d5bbcc99a",
    "metadata": {},
    "outputs": [],
    "source": []
