--- a/oop.ipynb
+++ b/oop.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "f437d6c2",
    "metadata": {},
    "outputs": [],
@@ -86,16 +86,19 @@
     "        self.color=color\n",
     "        self.weight=weight\n",
     "        self.height=height\n",
-    "        self.spots=spots    # Expecting a Boolean\n",
+    "        self.spots=bool(spots)    # Expecting a Boolean\n",
     "        self.bark_volume=bark_volume\n",
     "\n",
     "    def bark(self):\n",
-    "        print(f\"Woof Woof! I am a {self.breed}! My name is {self.name}. I am a {self.age}-year-old {self.gender}, with the color of my fur being {self.color}. My weight is {self.weight} pounds, and my height is {self.height} inches tall\")"
+    "        print(f\"Woof Woof! I am a {self.breed}! My name is {self.name}. I am a {self.age}-year-old {self.gender}, with the color of my fur being {self.color}. My weight is {self.weight} pounds, and my height is {self.height} inches tall\")\n",
+    "\n",
+    "def __str__(self):\n",
+    "        return f\"Woof Woof! I am a {self.breed}! My name is {self.name}. I am a {self.age}-year-old {self.gender}, with the color of my fur being {self.color}. My weight is {self.weight} pounds, and my height is {self.height} inches tall\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "7cffffbe",
    "metadata": {},
    "outputs": [],
@@ -105,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "00e13e6d",
    "metadata": {},
    "outputs": [
@@ -115,7 +118,7 @@
        "'Spike'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
